--- a/assistive_gym/config.ini
+++ b/assistive_gym/config.ini
@@ -14,6 +14,8 @@ robot_forces = 1.0
 robot_gains = 0.05
 distance_weight = 1.0
 action_weight = 0.01
+kinematics_weight = 2.5
+hanging_link_weight = 2.0
 wiping_reward_weight = 5.0
 task_success_threshold = 0.3
 
@@ -67,5 +69,3 @@ height_scale = 1.0
 mass = 62.5
 radius_scale = 1.0
 height_scale = 1.0
-
-
